Fix profile pic spacing

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -52,6 +52,10 @@
 			margin: 0px auto;
 		}
 
+		img{
+			margin-top: -20px;
+		}
+
 		h1, .header h5{
 			text-align: center;
 		}
